ARM: dts: add reg address for ecap module
PRU firmware uses ecap module as timer for interrupt pacing support
at the receive or ingress direction. This patch adds dt entry for
ecap register address.

Signed-off-by: Murali Karicheri <m-karicheri2@ti.com>

--- a/arch/arm/boot/dts/dra7.dtsi
+++ b/arch/arm/boot/dts/dra7.dtsi
@@ -1221,9 +1221,11 @@
 					reg = <0x0 0x2000>,
 					      <0x2000 0x2000>,
 					      <0x10000 0x8000>,
-					      <0x2e000 0x31c>;
+					      <0x2e000 0x31c>,
+					      <0x30000 0x60>;
 					reg-names = "dram0", "dram1",
-						    "shrdram2", "iep";
+						    "shrdram2", "iep",
+						    "ecap";
 				};
 
 				pruss1_cfg: cfg@26000 {
@@ -1313,10 +1315,12 @@
 					reg = <0x0 0x2000>,
 					      <0x2000 0x2000>,
 					      <0x10000 0x8000>,
-					      <0x2e000 0x31c>;
+					      <0x2e000 0x31c>,
+					      <0x30000 0x60>;
 
 					reg-names = "dram0", "dram1",
-						    "shrdram2", "iep";
+						    "shrdram2", "iep",
+						    "ecap";
 				};
 
 				pruss2_cfg: cfg@26000 {
